--- a/src/css/photoGallery.css
+++ b/src/css/photoGallery.css
@@ -5,8 +5,14 @@
 .gallery {
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
-  grid-auto-rows: 450px;
-  gap: 20px;
+  grid-auto-rows: 400px;
+  row-gap: 20px;
+  column-gap: 150px;
+}
+
+.gallery > li {
+  border: 4px solid #8192a0;
+  border-radius: 5px;
 }
 
 .photo-card {
@@ -17,6 +23,9 @@
 .img-container {
   height: 300px;
   width: 430px;
+
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .img-card {
